<resources>
    <string name="app_name">HatchatMobile</string>
    <string name="login">Login</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="LogoName">HatChat</string>

    <string name="Enter_Username">Enter Username</string>
    <string name="submit">Submit</string>
    <string name="add_contact">Add Contact</string>
    <string name="bio">Bio</string>
    <string name="default_name">Default name</string>
    <string name="contactimage">contactImage</string>

    <string name="hatchaticon">HatChatIcon</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="disclaimer_click_here">Click here</string>
    <string name="disclaimer_to_register">to register.</string>
    <string name="_2023_hatchat_inc">© 2023 HatChat, Inc.</string>
    <string name="full_name">Full name</string>
    <string name="password_requirements">Password Requirements!</string>
    <string name="confirm_password">confirm password</string>
    <string name="upload_image">Upload_image</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter message...</string>
    <string name="this_is_a_message">This is a Message</string>

<!--    <string name="base_url">http://10.0.2.2:5000/api/</string>-->
    <string name="setting">Setting</string>
    <string name="moon_icon">Moon Icon</string>
    <string name="dark_mode">Dark Mode:</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="enter_ip">Enter IP:</string>
    <string name="change_url">Change URL:</string>
    <string name="return_icon">Return Icon</string>
    <string name="settings_icon">settings_icon</string>


</resources>