<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/getContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/Enter_Username"
            android:autofillHints="username"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/btnSubmit"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:background="@drawable/add_contact_icon"
            android:text="@string/submit"
            android:contentDescription="@string/add_contact" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
