<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:padding="10dp"-->
<!--        tools:ignore="MissingConstraints">-->

<!--        <ImageView-->
<!--            android:id="@+id/imageView"-->
<!--            android:layout_width="99dp"-->
<!--            android:layout_height="76dp"-->
<!--            app:srcCompat="@drawable/hatIcon"-->
<!--            tools:layout_editor_absoluteX="16dp"-->
<!--            tools:layout_editor_absoluteY="37dp" />-->

<!--        <TextView-->
<!--            android:id="@+id/LogoName"-->
<!--            android:layout_width="213dp"-->
<!--            android:layout_height="55dp"-->
<!--            android:text="@string/LogoName"-->
<!--            android:layout_gravity="center_vertical"/>-->
<!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/usernameInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernameHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordHint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/login" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>