<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginBottom="2dp"
            android:background="#aaaaaa"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ContactImageInChat"
                android:layout_width="111dp"
                android:layout_height="70dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="3dp"
                android:contentDescription="@string/contactimage"
                android:scaleType="centerCrop"
                android:src="@drawable/haticon" />

            <TextView
                android:id="@+id/ContactInChatName"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:text="@string/default_name"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/ChatMessagesLV"
                android:layout_width="377dp"
                android:layout_height="606dp"
                app:layout_constraintBottom_toTopOf="@+id/messageEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

            </ListView>

            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="0dp"
                android:layout_height="62dp"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/enter_message"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sendButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ChatMessagesLV"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="92dp"
                android:layout_height="56dp"
                android:layout_marginEnd="8dp"
                android:background="#378805"
                android:text="@string/send"
                app:layout_constraintBottom_toBottomOf="@+id/messageEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/messageEditText"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
