<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_screen_background"
    tools:context=".RegisterScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-92dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/companyName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:fontFamily="@font/abeezee"
                android:gravity="center"
                android:includeFontPadding="true"
                android:inputType="none"
                android:text="@string/app_name"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false"
            android:gravity="start"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullnameTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="314.9dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullnameInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:baselineAligned="false"
                android:gravity="start"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordInputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@drawable/text_fields_background"
                        android:hint="@string/passwordHint"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/passwordRequirementsButton"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11.3dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/btn_drawable_selector"
                    android:contentDescription="@string/password_requirements"
                    android:scaleType="center"
                    app:backgroundTint="@null"
                    app:maxImageSize="10dp" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordInputText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="314.9dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:hint="@string/usernameHint"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/uploadImage"
            android:layout_width="114dp"
            android:layout_height="92dp"
            android:background="@drawable/circle_background_image" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


