<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_screen_background"
    tools:context=".Activities.SettingActivity">

    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="150dp"
        android:background="#F9F9F9"
        android:contentDescription="@string/return_icon"
        android:src="@drawable/return_icon"
        app:layout_constraintBottom_toTopOf="@id/contentLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-92dp">

        <LinearLayout
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/companyName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:clickable="false"
                android:fontFamily="@font/abeezee"
                android:gravity="center"
                android:includeFontPadding="true"
                android:inputType="none"
                android:text="@string/setting"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:typeface="normal"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/moon_icon"
                android:src="@drawable/moon_actice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/dark_mode"
                android:textColor="@android:color/black" />

            <Switch
                android:id="@+id/darkModeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="5dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/change_url"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/UrlLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="335dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/UrlText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:background="@drawable/text_fields_background"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/IPSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="5dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
